--- a/views/topic_view.html
+++ b/views/topic_view.html
@@ -19,6 +19,7 @@
 				浏览数：{{Topic.Views}}&nbsp;&nbsp;&nbsp;&nbsp;
 				评论数：{{Topic.ReplyCount}}&nbsp;&nbsp;&nbsp;&nbsp;
 				发布于：{{Topic.Created}}&nbsp;&nbsp;&nbsp;&nbsp;
+				更新于：{{Topic.Updated}}&nbsp;&nbsp;&nbsp;&nbsp;
 				</small>
 			</h3>
 			<div >
