--- a/views/category.html
+++ b/views/category.html
@@ -23,7 +23,7 @@
 					<tr>
 						<th>#</th>
 						<th>分类名称</th>
-						<th>文章数</th>
+						<th>文章数量</th>
 						<th>操作</th>
 					</tr>
 				</thead>
