--- a/views/topic_modify.html
+++ b/views/topic_modify.html
@@ -11,7 +11,7 @@
 		
 		<div class="container">
 			<h1>修改文章</h1>
-			<form method="POST" action="/topic" enctype="multipart/form-data" ng-model = "Topic">
+			<form method="POST" action="/topic" enctype="multipart/form-data">
 				<input type="hidden" id = "tid" name="tid" value="<<<.tid>>>">
 				<div class="form-group">
 					<label>文章标题：</label>
