--- a/views/user.html
+++ b/views/user.html
@@ -27,6 +27,7 @@
 					<tr ng-repeat="x in Users">
 						<td>{{x.Id}}</td>
 						<td><a href="/user/view?uname={{x.Name}}">{{x.Name}}</a></td>
+						<td>{{x.Password}}</td>
 						<td>{{x.Created}}</td>
 						<td>{{x.Updated}}</td>
 						<td>
