--- a/views/login.html
+++ b/views/login.html
@@ -32,7 +32,7 @@
 			  <div class="form-group">
 				<div class="col-lg-offset-2 col-lg-10">
 				    	<a href="/login"><button type="submit" class="btn btn-default" ng-click = "checkInput($event)">登录</button></a>
-			      	<button class="btn btn-default" ng-click ="backToHome()">返回</button>
+			      	<button class="btn btn-default" ng-click ="backToHome($event)">返回</button>
 			    </div>
 			  </div>
 			</form>
