--- a/views/user_add.html
+++ b/views/user_add.html
@@ -15,22 +15,27 @@
 				<input type="hidden" id = "isAdd" name="isAdd" value="true">		
 				<div class="form-group">
 					<label>用户：</label>
-					<input type="text" class="form-control" name="uname">
+					<input type="text" class="form-control" id="uname" name="uname">
 				</div>
 				
 				<div class="form-group">
 					<label>密码：</label>
-					<input type="text" class="form-control" name="pwd">
+					<input type="text" class="form-control" id="pwd" name="pwd">
 				</div>
-				
-				<button type="submit" class="btn btn-default">添加用户</button>
+				    	<a href="/user"><button type="submit" class="btn btn-default" ng-click = "checkInput($event)">添加用户</button></a>
 			</form>
 		</div>
 		
 	</body>
 
-	<<<template "javascript">>>
+		<<<template "javascript">>>
 		
-
+		<!--AngularJS-->
+		<script type="text/javascript" src="/static/js/controllers/user.js"></script>		
+		<!---->
+		
+		<!--ToolsJS-->
+		<script type="text/javascript" src="/static/js/tools.js"></script>		
+		<!---->
 	
 </html>
