--- a/views/topic_view.html
+++ b/views/topic_view.html
@@ -35,7 +35,7 @@
             <div ng-repeat = "x in Replies">
 	            <h4>{{x.Name}}
 					 <small>{{x.Created}} 
-					     <a href="/reply/delete?tid=<<<.Tid>>>&rid={{x.Id}}">删除</a>
+					     <a href="/reply/delete?tid=<<<.tid>>>&rid={{x.Id}}">删除</a>
 					 </small> 
 				</h4>
 				<span style = "word-wrap: break-word;">
